Revert "Fix tooltip top getting cut off"
This reverts commit 4bd797f68487cd27c5777fc2ed600544440183f1.

--- a/data/assets/05_matrix_tooltip.css
+++ b/data/assets/05_matrix_tooltip.css
@@ -24,6 +24,7 @@
     /* Position the tooltip text */
     position: absolute;
     z-index: 1;
+    bottom: 125%;
     left: 50%;
     margin-left: -150px;
 
@@ -35,9 +36,8 @@
 /* Tooltip arrow */
 .tooltip-container .tooltip-window::after {
     content: "";
-    transform: rotate(180deg);
     position: absolute;
-    top: -9px;
+    top: 100%;
     left: 50%;
     margin-left: -5px;
     border-width: 5px;
